--- a/src/pages/cart/Cart.module.css
+++ b/src/pages/cart/Cart.module.css
@@ -1,3 +1,14 @@
+@media (max-width: 600px) {
+  .table {
+    width: 100%;
+    padding: 0.5em;
+  }
+
+  .input {
+    width: 2em;
+  }
+}
+
 .table {
   width: 600px;
   background-color: #f1f1f1;
@@ -6,6 +17,15 @@
   padding: 1em;
   border-spacing: 5px;
   margin-bottom: 2em;
+}
+
+.table tbody tr:hover {
+  background-color: #e2e2e2;
+}
+
+.button:hover {
+  background-color: #ccc;
+  color: #333;
 }
 
 .table tbody td {
