--- a/src/pages/category/Category.module.css
+++ b/src/pages/category/Category.module.css
@@ -1,8 +1,12 @@
 .products {
   list-style-type: none;
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(5, 1fr);
   grid-gap: 1em;
   padding: 0;
   margin: 2em;
+}
+
+.customWidth {
+  width: 20%;
 }
