--- a/src/pages/home/slider.module.css
+++ b/src/pages/home/slider.module.css
@@ -1,3 +1,24 @@
-img {
-  width: 200px;
+.slide {
+  position: relative;
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+.slideImage {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.swiper_container .full_width {
+  width: 100%;
+  height: auto;
 }
