--- a/src/pages/home/slider.module.css
+++ b/src/pages/home/slider.module.css
@@ -1,21 +1,16 @@
 .slide {
-  position: relative;
+  /* width: 1250px; */
   width: 100%;
   height: auto;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
 }
 
 .slideImage {
+  display: block;
+  margin: 0 auto;
+  /* width: 1295px; */
   width: 100%;
   height: auto;
   object-fit: cover;
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
 
 .swiper_container .full_width {
