--- a/src/pages/profile/order.module.css
+++ b/src/pages/profile/order.module.css
@@ -1,3 +1,24 @@
+@media (max-width: 768px) {
+  .custom_card {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .product_info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .product_image {
+    width: 100%;
+  }
+
+  .product_details {
+    text-align: center;
+  }
+}
+
 .custom_accordion {
   border: 1px solid #ccc;
   border-radius: 5px;
