--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@ body {
   background-color: "#eee" !important;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  height: 100vh;
 }
 
 code {
