--- a/src/pages/profile/order.module.css
+++ b/src/pages/profile/order.module.css
@@ -65,3 +65,13 @@
   font-weight: bold;
   margin-right: 5px;
 }
+
+.rtlAccordionHeader button::after {
+  margin-left: unset !important;
+  margin-right: auto !important;
+}
+
+.accordion_header button::after {
+  margin-left: auto;
+  margin-right: unset;
+}
